<resources>
    <string name="app_name">Doubt_Hub</string>
    <string name="welcome_to_the_app">Welcome to the app</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="ask_your_doubts">Ask your doubts with AI</string>
    <string name="settings">Settings</string>
    <string name="remove">remove</string>
    <string name="settingimage">SettingImage</string>
    <string name="doubtimage">doubtimage</string>
    <string name="create">Create</string>
    <string name="floating">floating</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log In</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="create_an_account">Create an account</string>
    <string name="stuck_in_a_problem_don_t_know_where_to_start">Stuck in problem, don\'t know where to start</string>
    <string name="startactivitimage">startactivitimage</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="sign_upbutton">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account_login">Already have an account? login</string>
    <string name="login">Login</string>
    <string name="loginbutton">Login</string>
    <string name="not_yet_registered_singup_now">Not yet registered? SingUp</string>
    <string name="forget_password">Forgot Password</string>
    <string name="canceldialog">Cancel</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email_address">Enter Your Email address:</string>
    <string name="write_your_query">Write your query</string>
    <string name="ask">ask</string>
    <string name="ask_your_query">Ask Your Query</string>
    <string name="submit">Submit</string>
    <string name="your_doubts">Doubts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="upername">upername</string>
    <string name="profile_img">profile-img</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="date">date</string>
    <string name="question">question</string>
    <string name="reply">reply</string>
    <string name="suggestion">Suggestion</string>
    <string name="send_anonymously">Send Anonymously</string>
    <string name="here_are_some_examples_for_query">Here are some examples for query:-</string>
    <string name="write_your_query_here">Write your query here</string>
    <string name="welcome_to_your_personal_assistant_ai">Welcome to your personal assistant AI</string>
    <string name="hello_how_are_you">Hello how are you?</string>
    <string name="send_buttton">send buttton</string>
</resources>