<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24" />
    <item
        android:id="@+id/chat"
        android:title="@string/your_doubts"
        android:icon="@drawable/baseline_school_24"/>

    <item
        android:title=""/>

    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/baseline_notifications_24"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"
        />


<!--    <item-->
<!--        android:id="@+id/subscriptions"-->
<!--        android:title="Subscriptions"-->
<!--        android:icon="@drawable/ic_baseline_subscriptions_24" />-->
<!--    <item-->
<!--        android:id="@+id/library"-->
<!--        android:title="Library"-->
<!--        android:icon="@drawable/ic_baseline_video_library_24" />-->

</menu>