<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialougebox"
    android:orientation="vertical">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_remove_24"
        app:tint="@color/purple"
        android:contentDescription="@string/remove" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:padding="8dp"
            android:text="@string/create"
            android:textAlignment="viewStart"
            android:textColor="@color/purple"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/baseline_clear_24"
            app:tint="@color/purple"
            android:contentDescription="@string/cancel" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/askdoubts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_ask"
            android:contentDescription="@string/doubtimage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/ask_your_doubts"
            android:textColor="@color/purple"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_chat_bubble_24"
            android:contentDescription="@string/settingimage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/ask_your_query"
            android:textColor="@color/purple"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>