<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/backpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_arrow_back_ios_24"
                android:padding="10dp"
                android:contentDescription="@string/back" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/ask_your_query"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="40dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardPreventCornerOverlap="false"
            android:layout_gravity="center_vertical|end"
            app:cardCornerRadius="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/iv_ask"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/baseline_person_24"
                android:clickable="true"
                android:contentDescription="@string/ask"
                android:focusable="true"
                android:scaleType="center" />
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">

        <EditText
            android:id="@+id/write_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/purple_border"
            android:drawablePadding="8dp"
            android:hint="@string/write_your_query"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="8"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/anonymousSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/write_question"
            android:layout_marginTop="10dp"
            android:text="@string/send_anonymously"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/askButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/anonymousSwitch"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple"
            android:text="@string/submit"
            android:textColor="#263238"
            android:textSize="18sp"
            app:cornerRadius="20dp" />

    </RelativeLayout>

</RelativeLayout>
