<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/purple"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:padding="24dp">


            <TextView
                android:id="@+id/signText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/purple_border"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#5C6BC0"
                tools:ignore="VisualLintTextFieldSize" />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/purple_border"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#5C6BC0"
                tools:ignore="VisualLintTextFieldSize" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/purple_border"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#5C6BC0"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/purple_border"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:textColorHint="#5C6BC0"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/signButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:text="@string/sign_upbutton"
                android:textColor="#263238"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        android:onClick="OpenActivity2"
        android:padding="8dp"
        android:text="@string/already_have_an_account_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:ignore="UsingOnClickInXml" />

</LinearLayout>