<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/dialogForget"
    android:padding="20dp"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialogBox"
        app:layout_constraintBaseline_toTopOf="parent"
        android:background="@drawable/white_box">

        <TextView
            android:id="@+id/forgotTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/forget_round"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/forget_password"
            android:textColor="#1A237E"
            android:textSize="17sp"
            app:layout_constraintBaseline_toTopOf="parent"
            app:drawableLeftCompat="@drawable/baseline_lock_reset_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desc"
            android:text="@string/enter_your_email_address"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            app:layout_constraintBottom_toTopOf="@id/emailBox"/>


        <EditText
            android:id="@+id/emailBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/purple"
            android:hint="@string/email"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#373737"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            tools:ignore="TextFields" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnCancel"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/canceldialog"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailBox"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/btnReset"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>