<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity"
    android:background="@color/white">


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:id="@+id/rv_bot"
        android:layout_above="@id/bottomLayout"/>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/welcome_to_your_personal_assistant_ai"
        android:textSize="28sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:id="@+id/bottomLayout">

        <EditText
            android:id="@+id/msgEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/sendBtn"
            android:background="@drawable/white_box"
            android:textColor="@color/black"
            android:hint="@string/write_your_query_here"
            android:maxLines="8"
            android:padding="16dp"
            android:textColorHint="@color/black" />

        <ImageButton
            android:id="@+id/sendBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="@color/white"
            android:contentDescription="@string/send_buttton"
            android:padding="8dp"
            android:src="@drawable/baseline_send_24"
            app:tint="@color/purple" />


    </RelativeLayout>

</RelativeLayout>